<resources>

    <string name="app_name">My Password Locker</string>
    <string name="page_edit_profile">Update Profile</string>
    <string name="page_create_keeper">Create Password</string>
    <string name="page_policy_info">Privacy and Licenses</string>
    <string name="page_about_us">About</string>
    <string name="page_forget_password">Forget Password</string>
    <string name="page_recovery_questions">Questionnaires</string>
    <string name="page_entry_details">Details</string>
    <string name="page_edit_entry">Edit</string>
    <string name="page_add_new_entry">Add New</string>
    <string name="page_entry_list">Home</string>
    <string name="page_file_backup">Select Backup File</string>
    <string name="spinner_all">All</string>
    <string name="spinner_personal">Personal</string>
    <string name="spinner_professional">Professional</string>
    <string name="spinner_others">Other</string>
    <string name="spinner_banking">Banking</string>
    <string name="spinner_email">Email</string>
    <string name="spinner_social">Social</string>
    <string name="spinner_private">Private</string>
    <string name="spinner_phone">Phone</string>
    <string name="spinner_prompt">Select</string>
    <string name="spinner_set_filter">Set Filters</string>
    <string name="spinner_label_select_category">Select Category</string>
    <string name="spinner_label_select_type">Select Type</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_add_new_record">Add New Record</string>
    <string name="menu_search_entry">Search</string>
    <string name="menu_export_data">Backup Your Data</string>
    <string name="menu_import_data">Restore Backup</string>
    <string name="menu_recovery_option">Security Questions</string>
    <string name="menu_view_profile">View Profile</string>
    <string name="menu_privacy_policy">Privacy &amp; Licenses</string>
    <string name="menu_about_us">About</string>
    <string name="menu_manage_filters">Manage Categories</string>
    <string name="menu_delete">Delete</string>
    <string name="button_next">Next</string>
    <string name="button_get_token">Get Token</string>
    <string name="button_submit_token">Submit Token</string>
    <string name="button_submit_answers">Submit Answers</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_add_photo">Add photo for your record</string>
    <string name="button_add_more">Add More</string>
    <string name="button_proceed">Start Using</string>
    <string name="button_login">Login</string>
    <string name="button_accept">Accept</string>
    <string name="button_decline">Decline</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_view_secrete_key">View Stored Password</string>
    <string name="button_add_new_entry">+ Add New Record</string>
    <string name="alert_title">Alert</string>
    <string name="alert_policy_update">Update</string>
    <string name="alert_msg_incorrect_token">You entered the wrong password..!</string>
    <string name="alert_info_valid_phone">** Include plus sign, country code and area code. For example, +1&#8211;800&#8211;555&#8211;0199. This number, along with your email id, will be used to regenerate your lost password for the application.</string>
    <string name="alert_msg_incorrect_emailid">Email Id is not valid</string>
    <string name="alert_msg_incorrect_ssn">Enter 4 digit number</string>
    <string name="alert_msg_same_password">New and old password should not be same.</string>
    <string name="alert_msg_incorrect_phonenumber">Enter valid mobile number</string>
    <string name="alert_msg_export_success">All your data has been exported successfully. Keep the backup file SAFE as it will be used to restore the data when required for you.\n\nThe file is stored at,</string>
    <string name="alert_msg_no_data_export">There is no data to take backup.</string>
    <string name="alert_msg_export_failed">Exporting backup data in a file is failed. Please check that you have sufficient memory and then try again.</string>
    <string name="alert_blank_field">This field can not be blank</string>
    <string name="alert_invalid_reset_token">The token which you entered is not valid or expired. Please try again.</string>
    <string name="alert_blankormin_chars_field">This field can not be blank and should have minimum number of chars</string>
    <string name="hint_password">Password</string>
    <string name="hint_reset_token">Reset Token</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_enter_title">Enter Title</string>
    <string name="hint_search_text">Search</string>
    <string name="hint_enter_key">Title</string>
    <string name="hint_enter_value">Value</string>
    <string name="hint_required">(Required)</string>
    <string name="hint_optional">(Optional)</string>
    <string name="hint_answer">Answer</string>
    <string name="hint_enter_description">Enter description or notes about the record</string>
    <string name="hint_enter_passcode">Password to remember</string>
    <string name="text_file_no_files_dirs">No files or directories</string>
    <string name="text_profile_name">First Name</string>
    <string name="text_profile_surname">Last Name</string>
    <string name="text_profile_city">City</string>
    <string name="text_profile_state">State</string>
    <string name="text_profile_country">Country</string>
    <string name="text_profile_email_id">Email</string>
    <string name="text_profile_alt_email_id">Alternate Email</string>
    <string name="text_profile_alt_phone_number">Alternate Mobile Number</string>
    <string name="text_profile_phone_number">Mobile Number</string>
    <string name="text_app_password">Password</string>
    <string name="text_title">Title &#58;</string>
    <string name="text_label_enter_password">Enter Password to proceed&#58;</string>
    <string name="text_description">Description / Note &#58;</string>
    <string name="text_secrete_key">Password &#58;</string>
    <string name="text_last_updated">Last updated on &#58;</string>
    <string name="text_get_reset_token">Reset token will be sent to your registered mobile number which you added while configuring the profile. To proceed you need to have active SMS plan on the mobile.</string>
    <string name="text_submit_reset_token">Copy your \"reset token\" which you receive as SMS on your registered mobile number. Paste/enter that token here and submit to proceed with the master password reset steps.</string>
    <string name="text_reset_by_email">Registered email id</string>
    <string name="text_reset_by_phone">Registered mobile number</string>
    <string name="text_label_create_password">Configure Your Master Password &#58;</string>
    <string name="text_label_confirm_old_password">Enter Current Password &#58;</string>
    <string name="text_label_login">Login To Proceed &#58;</string>
    <string name="text_label_forgot_password">Forgot your password?</string>
    <string name="text_label_no_description">"(No description added)"</string>
    <string name="text_label_no_passcode">"(No Password added)"</string>
    <string name="text_label_record_details">Enter your record\'s details &#58;</string>
    <string name="text_label_no_record_found">You have not added any records in the \"Remember Me\" list.</string>
    <string name="text_label_no_record_found_personal">You have not added any records in the \"Personal Category\" list.</string>
    <string name="text_label_no_record_found_prof">You have not added any records in the \"Professional Category\" list.</string>
    <string name="text_label_no_search_results_found">No search results found&#8230;</string>
    <string name="text_label_enter_title">Title &#58;</string>
    <string name="text_label_enter_description">Description / Notes &#58;</string>
    <string name="text_label_enter_additional_info">Additional Info &#58;</string>
    <string name="text_label_enter_passcode">Password To Remember &#58;</string>
    <string name="text_toast_success_entry_add">Record saved successfully..!</string>
    <string name="text_toast_recovery_options_set">Security questions updated successfully..!</string>
    <string name="text_toast_success_import">Data has been imported successfully..!</string>
    <string name="text_toast_failure_import">Unable to import data from selected file. Please make sure that you have selected correct backup file for import and then try again.</string>
    <string name="text_toast_success_profile_update">Profile updated successfully..!</string>
    <string name="text_toast_success_new_password">New password has been configured successfully..!</string>
    <string name="text_toast_success_entry_delete">Record has been deleted successfully..!</string>
    <string name="text_toast_token_sent_email">Token is sent to your registered email id.</string>
    <string name="text_toast_token_sent_phone">Token is sent to your registered mobile number.</string>
    <string name="text_help_how_to_use">How to use?</string>
    <string name="text_help_step1">Step 1</string>
    <string name="text_help_step2">Step 2</string>
    <string name="text_help_step3">Step 3</string>
    <string name="text_help_step1_label">Set up your profile&#8230;</string>
    <string name="text_help_step2_label">Set up your password&#8230;</string>
    <string name="text_help_step3_label">Start using&#8230;</string>
    <string name="text_label_no_data_set">"(Not set)"</string>
    <string name="text_label_profile_setup_title">Set up your profile &#58;</string>
    <string name="text_label_profile_">Set up your profile &#58;</string>
    <string name="text_label_initiate_search">Type in the edit field to search with selected filter values&#8230;</string>
    <string name="text_about_us_description">© 2015 All rights reserved.</string>
    <string name="text_policy_and_licenses_link">Privacy Policy &amp; Licenses Information</string>
    <string name="text_rate_this_app_link">Rate this app now!</string>
    <string name="text_label_app_version">App Version &#58;</string>
    <string name="text_recovery_description_editmode">If you can\'t log into application, you may have the option to get back into your account by answering these security questions.</string>
    <string name="text_recovery_description_submitmode">To proceed with the password reset, please provide answers to the following security questions,</string>
    <string name="text_recovery_question1">What is your favourite person\'s name?</string>
    <string name="text_recovery_question2">What is the name of your native place?</string>
    <string name="text_recovery_question3">Enter last 4 digits of your Unique Identity Number (e.g. SSN)&#58;</string>
    <string name="text_recovery_question4">Enter your registered email address&#58;</string>
    <string name="alert_text_setup_recovery">You have not yet setup your password recovery questionnaires. Answer those now as it will be helpful to recover your lost password.</string>
    <string name="alert_text_recovery_failed">Incorrect answers, please try again.</string>
    <string name="text_toast_token_sent_sms_failed">Unable to send token to registered mobile number. Please check that you have active SMS plan &amp; SMS services are working on your device.</string>
    <string name="text_toast_token_sent_wait">Sending reset token to registered mobile number&#8230;</string>
    <string name="text_error_confirm_password">Please enter same password as above</string>

</resources>