<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- View Profile -->
    <item
        android:id="@+id/action_view_profile"
        android:showAsAction="never"
        android:title="@string/menu_view_profile"/>

    <!-- Export Data -->
    <item
        android:id="@+id/action_export_data"
        android:showAsAction="never"
        android:title="@string/menu_export_data"/>

    <!-- Import Data -->
    <item
        android:id="@+id/action_import_data"
        android:showAsAction="never"
        android:title="@string/menu_import_data"/>

    <!-- Security Questions -->
    <item
        android:id="@+id/action_security_backup"
        android:showAsAction="never"
        android:title="@string/menu_recovery_option"/>

    <!-- About Us -->
    <item
        android:id="@+id/action_about_us"
        android:showAsAction="never"
        android:title="@string/menu_about_us"/>

</menu>