<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dip" >

        <ImageView
            android:id="@+id/imageInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:padding="15dip"
            android:src="@drawable/tutorial_head" />

        <TextView
            style="@style/text_large_italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="20dip"
            android:singleLine="true"
            android:text="@string/text_help_how_to_use"
            android:textSize="28sp" />

        <TextView
            style="@style/text_small_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="15dip"
            android:singleLine="true"
            android:text="@string/text_help_step1" />

        <TextView
            style="@style/text_medium_italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="20dip"
            android:singleLine="true"
            android:text="@string/text_help_step1_label" />

        <TextView
            style="@style/text_small_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="15dip"
            android:singleLine="true"
            android:text="@string/text_help_step2" />

        <TextView
            style="@style/text_medium_italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="20dip"
            android:singleLine="true"
            android:text="@string/text_help_step2_label" />

        <TextView
            style="@style/text_small_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="5dip"
            android:paddingTop="15dip"
            android:singleLine="true"
            android:text="@string/text_help_step3" />

        <Button
            android:id="@+id/buttonStep3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text_help_step3_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic"
            android:visibility="visible" />

        <TextView
            android:id="@+id/policyLinkText"
            style="@style/text_small_italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:paddingTop="20dip"
            android:singleLine="false"
            android:text="@string/text_policy_and_licenses_link"
            android:textColor="@color/link_text_color" />
    </LinearLayout>

</ScrollView>