<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dip" >

        <ImageView
            android:id="@+id/imageMainLock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:scaleType="center"
            android:src="@drawable/main_locker" />

        <LinearLayout
            android:id="@+id/resetOptionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:id="@+id/resetTokenText"
                style="@style/text_medium_italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="5dip"
                android:paddingTop="10dip"
                android:text="@string/text_get_reset_token" />

            <RadioGroup
                android:id="@+id/resetTokenGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <RadioButton
                    android:id="@+id/resetByEmail"
                    style="@style/text_small_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/text_reset_by_email" />

                <RadioButton
                    android:id="@+id/resetByPhoneNumber"
                    style="@style/text_small_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_reset_by_phone" />
            </RadioGroup>

            <Button
                android:id="@+id/buttonSendToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="true"
                android:text="@string/button_get_token"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/submitContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/submitResetTokenText"
                style="@style/text_small_italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="4dip"
                android:paddingTop="10dip"
                android:text="@string/text_submit_reset_token" />

            <EditText
                android:id="@+id/enterResettoken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="200"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </EditText>

            <Button
                android:id="@+id/buttonSubmitToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="true"
                android:text="@string/button_submit_token"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>