<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginPageContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dip" >

    <TextView
        android:id="@+id/labelCreatePassword"
        style="@style/text_medium_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterPassword"
        android:gravity="center_horizontal"
        android:paddingBottom="10dip"
        android:text="@string/text_label_login" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelCreatePassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLength="12"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </EditText>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:text="@string/button_login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/forgotPasswordText"
        style="@style/text_small_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:gravity="left"
        android:paddingLeft="5dip"
        android:paddingTop="10dip"
        android:text="@string/text_label_forgot_password"
        android:textColor="@color/link_text_color"
        android:textStyle="bold|italic" />

</RelativeLayout>